Entity Category AND Entity Rooms

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,6 +38,16 @@
                         {#Create Article#}
                         {#</a>#}
                         {#</li>#}
+                            <li>
+                                <a href="{{ path('category_create') }}" class="navbar-brand">
+                                    Create Category
+                                </a>
+                            </li>
+                            <li>
+                            <a href="{{ path('room_create') }}" class="navbar-brand">
+                            Create Room
+                            </a>
+                            </li>
                         <li>
                         <a href="{{ path('security_logout') }}" class="navbar-brand">
                         Logout
