--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,6 +48,11 @@
                             Create Room
                             </a>
                             </li>
+                            <li>
+                                <a href="{{ path('payment_create') }}" class="navbar-brand">
+                                    Create Payment
+                                </a>
+                            </li>
                         <li>
                         <a href="{{ path('security_logout') }}" class="navbar-brand">
                         Logout
