--- a/app/Resources/views/payments/create.html.twig
+++ b/app/Resources/views/payments/create.html.twig
@@ -5,21 +5,14 @@
 {% block main %}
     <div class="container body-content span=8 offset=2">
         <div class="well">
-            <form class="form-horizontal" action="{{ path('room_create') }}" method="post">
+            <form class="form-horizontal" action="{{ path('payment_create') }}" method="post">
                 <fieldset>
-                    <legend>Create Room</legend>
+                    <legend>Create Payment</legend>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="room_number">Number</label>
-                        <div class="col-sm-4">
-                            <input type="number" class="form-control" id="room_bed" placeholder="Number" name="room[number]" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="article_category">Category</label>
-                        <div class="col-sm-4">
-                            {{ form_widget(form.category) }}
+                        <label class="col-sm-4 control-label" for="payment_name">Name</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="payment_name" placeholder="Name" name="payment[name]" required>
                         </div>
                     </div>
 
@@ -29,8 +22,6 @@
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </div>
-
-
 
                     {{  form_row(form._token) }}
                 </fieldset>
