--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -2,4 +2,33 @@
 
 {% block body %}
 
+
+
+    <div class="container body-content">
+        <div class="row">
+            {% for booking in bookings %}
+                <div class="col-md-12">
+                    <article>
+                        <header>
+                           Booking {{ booking.id }}
+                        </header>
+                        <p>
+                            Checkin: {{ booking.checkin|date("Y-m-d H:i:s") }}  Checkout: {{ booking.checkout|date("Y-m-d H:i:s") }}
+                        </p>
+
+                        <footer>
+                            <div class="pull-right">
+                                <a class="btn btn-default btn-xs"
+                                   href="{{ path('booking_view', {id: booking.id}) }}">Read more &raquo;</a>
+                            </div>
+                        </footer>
+                    </article>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+
+
+
 {% endblock %}
