ROLE_ADMIN, ROLE_USER

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,6 +33,11 @@
                         My Profile
                         </a>
                         </li>
+                            <li>
+                                <a href="{{ path('my_bookings') }}" class="navbar-brand">
+                                    My Bookings
+                                </a>
+                            </li>
                         <li>
                         <a href="{{ path('booking_create') }}" class="navbar-brand">
                         Create Booking
@@ -43,8 +48,6 @@
                                     Create Guest
                                 </a>
                             </li>
-
-
                             <li>
                                 <a href="{{ path('category_create') }}" class="navbar-brand">
                                     Create Category
