--- a/app/Resources/views/bookings/view.html.twig
+++ b/app/Resources/views/bookings/view.html.twig
@@ -30,8 +30,10 @@
 
                     <footer>
                         <div class="pull-right">
+                            {% if app.getUser() and ( app.getUser().isClient(booking) or app.getUser().isAdmin() ) %}
                             <a class="btn btn-success btn-xs" href="{{ path('booking_edit', {id: booking.id}) }}">Edit</a>
                             <a class="btn btn-danger btn-xs" href="{{ path('booking_delete', {id: booking.id}) }}">Delete</a>
+                            {% endif %}
                             <a class="btn btn-default btn-xs" href="{{ path('hotel_index') }}">Back &raquo;</a>
                         </div>
                     </footer>
