--- a/app/Resources/views/categories/create.html.twig
+++ b/app/Resources/views/categories/create.html.twig
@@ -31,6 +31,13 @@
                     </div>
 
                     <div class="form-group">
+                        <label class="col-sm-4 control-label" for="category_image">Image URL</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="category_image" placeholder="Image URL" name="category[imageURL]" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
                             {#<a class="btn btn-default" href="{{ path('hotel_index') }}">Cancel</a>#}
                             <button type="submit" class="btn btn-primary">Submit</button>
