--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -6,21 +6,20 @@
 
     <div class="container body-content">
         <div class="row">
-            {% for booking in bookings %}
+            {% for category in categories %}
                 <div class="col-md-12">
                     <article>
                         <header>
-                           Booking {{ booking.id }}
+
                         </header>
                         <p>
-                            Checkin: {{ booking.checkin|date("Y-m-d H:i:s") }}  Checkout: {{ booking.checkout|date("Y-m-d H:i:s") }}
+                            <a href="{{ path('booking_create') }}">
+                            <img src="{{ category.imageURL }}" width="600px" height="300px"> {{ category.name }} {{ category.price }} lv. BOOKING
+                            </a>
                         </p>
 
                         <footer>
-                            <div class="pull-right">
-                                <a class="btn btn-default btn-xs"
-                                   href="{{ path('booking_view', {id: booking.id}) }}">Read more &raquo;</a>
-                            </div>
+
                         </footer>
                     </article>
                 </div>
@@ -32,3 +31,4 @@
 
 
 {% endblock %}
+
