--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="{{ asset('css/bootstrap-datetimepicker.min.css') }}">
     {% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
+    <script>
+        setTimeout(function() {
+            $('#info').fadeOut();
+        }, 2000)
+    </script>
 </head>
 
 <body id="{% block body_id %}{% endblock %}">
