--- a/app/Resources/views/bookings/create.html.twig
+++ b/app/Resources/views/bookings/create.html.twig
@@ -56,19 +56,18 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_status">Status</label>
+                        <label class="col-sm-4 control-label" for="booking_payment">Status</label>
                         <div class="col-sm-4">
                             {{ form_widget(form.status) }}
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_room">Room</label>
+                        <label class="col-sm-4 control-label" for="booking_payment">Room</label>
                         <div class="col-sm-4">
                             {{ form_widget(form.room) }}
                         </div>
                     </div>
-
 
 
                     <div class="form-group">
