--- a/app/Resources/views/users/register.html.twig
+++ b/app/Resources/views/users/register.html.twig
@@ -11,13 +11,13 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_email">Email</label>
                         <div class="col-sm-4 ">
-                            <input class="form-control" id="user_email" placeholder="Email" name="user[email]" required type="email">
+                            <input class="form-control" id="user_email" placeholder="Email" name="user[email]" >
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_fullName">Full Name</label>
                         <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="user_fullName" placeholder="Full Name" name="user[fullName]" required>
+                            <input type="text" class="form-control" id="user_fullName" placeholder="Full Name" name="user[fullName]" >
                         </div>
                     </div>
                     <div class="form-group">
