--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,7 +23,7 @@
         <div class="navbar navbar-default navbar-static-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a href="{{ path('hotel_index') }}" class="navbar-brand">HOTEL</a>
+                    <a href="{{ path('hotel_index') }}" class="navbar-brand">HOTEL & SPA</a>
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -35,14 +35,34 @@
                         {% if app.user %}
                             {% if app.user.isAdmin() %}
                                 <li>
-                                    <a href="{{ path('admin_index') }}" class="navbar-brand">
-                                        Admin Panel
+                                    <a href="{{ path('guest_create') }}" class="navbar-brand">
+                                        Guest
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('category_create') }}" class="navbar-brand">
+                                        Category
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('room_create') }}" class="navbar-brand">
+                                         Room
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('payment_create') }}" class="navbar-brand">
+                                        Payment
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('status_create') }}" class="navbar-brand">
+                                        Status
                                     </a>
                                 </li>
                             {% endif %}
                             <li>
-                                <a href="{{ path('user_profile') }}" class="navbar-brand">
-                                    My Profile
+                                <a href="{{ path('booking_create') }}" class="navbar-brand">
+                                    Booking
                                 </a>
                             </li>
                             <li>
@@ -50,34 +70,9 @@
                                     My Bookings
                                 </a>
                             </li>
-                        <li>
-                        <a href="{{ path('booking_create') }}" class="navbar-brand">
-                        Create Booking
-                        </a>
-                        </li>
                             <li>
-                                <a href="{{ path('guest_create') }}" class="navbar-brand">
-                                    Create Guest
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ path('category_create') }}" class="navbar-brand">
-                                    Create Category
-                                </a>
-                            </li>
-                            <li>
-                            <a href="{{ path('room_create') }}" class="navbar-brand">
-                            Create Room
-                            </a>
-                            </li>
-                            <li>
-                                <a href="{{ path('payment_create') }}" class="navbar-brand">
-                                    Create Payment
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ path('status_create') }}" class="navbar-brand">
-                                    Create Status
+                                <a href="{{ path('user_profile') }}" class="navbar-brand">
+                                    My Profile
                                 </a>
                             </li>
                         <li>
@@ -86,14 +81,14 @@
                         </a>
                         </li>
                         {% else %}
+                            <li>
+                                <a href="{{ path('security_login') }}">
+                                    LOGIN
+                                </a>
+                            </li>
                         <li>
                         <a href="{{ path('user_register') }}">
                         REGISTER
-                        </a>
-                        </li>
-                        <li>
-                        <a href="{{ path('security_login') }}">
-                        LOGIN
                         </a>
                         </li>
                         {% endif %}
