List Category, Users, Bookings in Admin Panel

--- a/app/Resources/views/bookings/edit.html.twig
+++ b/app/Resources/views/bookings/edit.html.twig
@@ -10,7 +10,7 @@
         <div class="well">
             <form class="form-horizontal" action="{{ path('booking_edit', {id: booking.id}) }}" method="post">
                 <fieldset>
-                    <legend>Create Booking</legend>
+                    <legend>Edit Booking</legend>
 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_category">Category</label>
