--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,30 +34,18 @@
                     <ul class="nav navbar-nav navbar-right">
                         {% if app.user %}
                             {% if app.user.isAdmin() %}
-                                <li>
-                                    <a href="{{ path('guest_create') }}" class="navbar-brand">
-                                        Guest
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="{{ path('category_create') }}" class="navbar-brand">
-                                        Category
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="{{ path('room_create') }}" class="navbar-brand">
-                                         Room
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="{{ path('payment_create') }}" class="navbar-brand">
-                                        Payment
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="{{ path('status_create') }}" class="navbar-brand">
-                                        Status
-                                    </a>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                                       role="button" aria-expanded="false">Admin<span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="{{ path('all_bookings') }}">Bookings View</a></li>
+                                        <li><a href="{{ path('admin_categories') }}">Categories</a></li>
+                                        <li><a href="{{ path('guest_create') }}">Guests</a></li>
+                                        <li><a href="{{ path('payment_create') }}">Payments</a></li>
+                                        <li><a href="{{ path('room_create') }}">Rooms</a></li>
+                                        <li><a href="{{ path('status_create') }}">Statuses</a></li>
+                                        <li><a href="{{ path('admin_users') }}">Users</a></li>
+                                    </ul>
                                 </li>
                             {% endif %}
                             <li>
