--- a/app/Resources/views/admin/bookings/delete.html.twig
+++ b/app/Resources/views/admin/bookings/delete.html.twig
@@ -8,16 +8,18 @@
 
     <div class="container body-content span=8 offset=2">
         <div class="well">
-            <form class="form-horizontal" action="{{ path('booking_delete', {id: booking.id}) }}" method="post">
+            <form class="form-horizontal" action="{{ path('admin_booking_delete', {id: booking.id}) }}" method="post">
                 <fieldset>
                     <legend>Delete Booking</legend>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_category">Category</label>
-                        <div class="col-sm-4">
-                            {{ form_widget(form.category) }}
+                        <label class="col-sm-4 control-label" for="booking category">Category</label>
+                        <div class="col-sm-6">
+                            {{ form_widget(form.category, { 'attr':{'disabled':'disabled'}}) }}
                         </div>
                     </div>
+
+
 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_checkin">Checkin</label>
@@ -64,7 +66,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_payment">Payment</label>
                         <div class="col-sm-4">
-                            {{ form_widget(form.payment) }}
+                            {{ form_widget(form.payment, { 'attr':{'disabled':'disabled'}}) }}
                         </div>
                     </div>
 
@@ -85,14 +87,14 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_status">Status</label>
                         <div class="col-sm-4">
-                            {{ form_widget(form.status) }}
+                            {{ form_widget(form.status, { 'attr':{'disabled':'disabled'}}) }}
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_room">Room</label>
                         <div class="col-sm-4">
-                            {{ form_widget(form.room) }}
+                            {{ form_widget(form.room, { 'attr':{'disabled':'disabled'}}) }}
                         </div>
                     </div>
 
