--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -3,7 +3,7 @@
     <div class="container body-content">
         <div class="well">
             <h2>All Booking -
-                <a href="#" class="btn btn-warning">Create New</a>
+                <a href="{{ path('admin_booking_create') }}" class="btn btn-warning">Create New</a>
             </h2>
             <div class="row">
                 <table class="table table-striped table-hover ">
@@ -26,8 +26,8 @@
                             <td>{{ booking.checkout|date("Y-m-d") }}</td>
                             <td>{{ booking.status }}</td>
                             <td>
-                                <a href="#">Edit</a>
-                                <a href="#">Delete</a>
+                                <a href="{{ path('admin_booking_edit', {id: booking.id}) }}">Edit</a>
+                                <a href="{{ path('admin_booking_delete', {id: booking.id}) }}">Delete</a>
                             </td>
                         </tr>
                     {% endfor %}
