--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,7 +38,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                                        role="button" aria-expanded="false">Admin<span class="caret"></span></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="{{ path('all_bookings') }}">Bookings View</a></li>
+                                        <li><a href="{{ path('admin_bookings') }}">Bookings</a></li>
                                         <li><a href="{{ path('admin_categories') }}">Categories</a></li>
                                         <li><a href="{{ path('guest_create') }}">Guests</a></li>
                                         <li><a href="{{ path('payment_create') }}">Payments</a></li>
