--- a/app/Resources/views/bookings/create.html.twig
+++ b/app/Resources/views/bookings/create.html.twig
@@ -10,7 +10,7 @@
                     <legend>Create Booking</legend>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_category">Category</label>
+                        <label class="col-sm-4 control-label" for="article_category">Category</label>
                         <div class="col-sm-4">
                             {{ form_widget(form.category) }}
                         </div>
