--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -28,6 +28,7 @@
                             <td>
                                 <a href="{{ path('admin_booking_edit', {id: booking.id}) }}">Edit</a>
                                 <a href="{{ path('admin_booking_delete', {id: booking.id}) }}">Delete</a>
+                                <a href="{{ path('admin_booking_view', {id: booking.id}) }}">View</a>
                             </td>
                         </tr>
                     {% endfor %}
