--- a/app/Resources/views/admin/categories/list.html.twig
+++ b/app/Resources/views/admin/categories/list.html.twig
@@ -22,8 +22,8 @@
                         <td>{{ category.id }}</td>
                         <td>{{ category.getName() }}</td>
                         <td>
-                            <a href="#">Edit</a>
-                            <a href="#">Delete</a>
+                            <a href="{{ path('admin_category_edit', {id: category.id}) }}">Edit</a>
+                            <a href="{{ path('admin_category_delete', {id: category.id}) }}">Delete</a>
                         </td>
                     </tr>
                 {% endfor %}
