--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -10,18 +10,19 @@
                     {{ msg }}
                 </div>
             {% endfor %}
+            
+            <h2 style="text-align: center;">WELCOME</h2>
 
             {% for category in categories %}
-                <div class="col-md-6">
+                <div class="col-md-4 text-left" style="margin-top: 30px; margin-bottom: 70px;">
                     <article>
                         <header>
 
                         </header>
                         <div>
-                            {{ category.name }} ${{ category.price }} <br />
-                            <p><a class="btn btn-success btn-xs" href="{{ path('booking_create') }}">BOOKING</a></p>
-                            <img src="{{ category.imageURL }}" width="500px" height="350px">
-                            </a><br /><br /><br />
+                            <img src="{{ category.imageURL }}" width="370px" height="460px">
+                            <p style="margin-top: 20px; margin-bottom: 30px; font-size: 24px;">{{ category.name }} <span style="margin-left: 20px;">${{ category.price }}</span></p>
+                            <p><a class="btn btn-success" href="{{ path('booking_create') }}">BOOKING</a></p>
                         </div>
 
                         <footer>
